--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -23,3 +23,4 @@
   --gradient-2 : linear-gradient(-225deg, var(--color4-light) 0%, var(--color2-dark) 48%, var(--color3-normal) 100%);
   --gradient-3 : linear-gradient(-225deg, var(--color4-light) 0%, var(--color2-dark) 48%, var(--color6-normal) 100%);
 }
+$color1:red;
