--- a/src/styles/variables/animations/_keyframes.scss
+++ b/src/styles/variables/animations/_keyframes.scss
@@ -7,3 +7,4 @@
 @import './keyframes/fade-in';
 @import './keyframes/fade-in-blur';
 @import './keyframes/fade_out_blur';
+@import './keyframes/hand-wave';
