--- a/src/styles/local/partials/components/_greeting.scss
+++ b/src/styles/local/partials/components/_greeting.scss
@@ -1,44 +1,38 @@
 .greeting {align-items : center;display : flex;flex-basis : calc(var(--screen-height));font-weight : 900;
-  @media(#{$break1}) {flex-direction : column;justify-content : space-evenly;}
-
-  @media (#{$break2}) {
-  justify-content: space-evenly;padding-bottom: calc(var(--screen-height) * 0.1);
-  & div {
-    margin-top: calc(var(--screen-height) * 0.5);
+  @media #{$break1} {
+    flex-direction : column;justify-content : space-evenly;
   }
+  @media #{$break2} {
+    justify-content : space-evenly ;justify-content: space-evenly;
+    & .button_common1_wrapper {
+      margin-top : calc(var(--screen-height) * 0.5);
+    }
   }
-}
 
-.greeting_header {
-  @media (#{$break1}){
-    width : 80%;
+
+  &_text {
+    color : var(--color1-light);display : inline-block;font-family : "Raleway", sans-serif;line-height : 200% ;@include slide-right-animation(var(--animation-delay-400), var(--animation-duration-1100));font-size: 10rem;
+
+    & .hand-wave_icon {
+      @include hand-wave-animation(var(--animation-delay-400), var(--animation-duration-900));display : inline-block;
+    }
+
+    @media #{$break1}{
+      width : 80%;
+    }
   }
-  color : var(--color1-light);display : inline-block;font-family : "Raleway", sans-serif;font-size : 10rem;line-height : 160%;@include slide-right-animation(var(--animation-delay-400), var(--animation-duration-1100));
 
-  &_handicon {
-    @include hand-wave-animation(var(--animation-delay-400), var(--animation-duration-900));display : inline-block;
-  }
-}
+  & .connect_button{
+    @media #{$break1} {
 
-.greeting button {
-  & span {margin-left : 0.5rem;}
-
-  &:hover {
-    & span {@include hands-shake-animation;}
-  }
-}
-
-
-
-
-@keyframes hand-wave {
-  0% {
-    transform : rotate(2deg);
-  }
-  20% {
-    transform : rotate(-10deg);
-  }
-  40% {
-    transform : rotate(10deg);
+    }
+    @media #{$break2} {
+     align-self: flex-end;margin-bottom: 10%;
+    }
+    & .hands-shake_icon{
+    }
   }
 }
+
+
+
