--- a/src/styles/variables/_fonts.scss
+++ b/src/styles/variables/_fonts.scss
@@ -1,9 +1,9 @@
 :root {
-  @media(#{$break1}) {
+  @media #{$break1} {
     font-size : calc(var(--screen-width) / 100);
   }
-  @media(#{$break2}) {
-    font-size :  min(calc(var(--screen-width) / 200),8px);
+  @media #{$break2} {
+    font-size : min(calc(var(--screen-width) / 200));
   }
   @import url("https://fonts.googleapis.com/css2?family=Itim&family=Raleway:wght@100;900&display=swap");
 }
